fix feature update_user_info

--- a/client/src/components/chatContainer/style.module.scss
+++ b/client/src/components/chatContainer/style.module.scss
@@ -29,7 +29,10 @@
   max-height: 170px;
   min-width: 100px;
 }
-.imageSize {
+.image {
   max-width: 400px;
   min-width: 200px;
+  &:hover {
+    cursor: pointer;
+  }
 }
