update feature & clean code

--- a/api/src/views/recoveryPassword.ejs
+++ b/api/src/views/recoveryPassword.ejs
@@ -129,12 +129,12 @@
                                     line-height: 25px;
                                 "
                             >
-                                <p style="margin: 0">Bạn vui lòng nhập mã xác nhận dưới đây để khôi phục mật khẩu.</p>
+                                <p style="margin: 0">Bạn vui lòng nhấn vào link dưới đây để khôi phục mật khẩu.</p>
                             </td>
                         </tr>
                         <tr>
                             <td bgcolor="#ffffff" align="left">
-                                <h1 style="text-align: center"><%=code%></h1>
+                                <h4 style="text-align: center" style="margin-left: 30px"><%=url%></h4>
                             </td>
                         </tr>
 
